--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -11,11 +11,12 @@ body{
 .myportfolio {
     text-align: center;
     font-weight: bold;
-    font-size: 70px;
+    font-size: 35px;
     font-family: 微軟正黑體;
     color: #4f4f52;
     position: absolute;
-    top: 100px;
+    top: 40px;
+    /* bottom: 70px; */
     left: 0;
     right: 0;
 }
@@ -66,4 +67,21 @@ a {
 }
 .btn_read:hover{
     background-color: rgb(211, 140, 211);
+}
+@media screen and (min-width: 768PX){
+    .myportfolio{
+        font-size: 50px;
+        top: 50px;
+        left: 0;
+        right: 0;
+    }
+}
+
+@media screen and (min-width: 992PX){
+    .myportfolio{
+        font-size: 70px;
+        top: 100px;
+        left: 0;
+        right: 0;
+    }
 }
